fixed overflow bug in style.css in french card.
added overflow handling to the french card in style.css

--- a/style.css
+++ b/style.css
@@ -340,6 +340,7 @@ ul {
 	justify-content: flex-start;
 	align-items: flex-start;
 	padding: 24px;
+	overflow: hidden;
 }
 .french-word{
 	font-family: "Bebas Neue";
@@ -360,6 +361,10 @@ ul {
 	font-family: "IBM Plex Serif", serif;
 	font-size: 12px;
 	margin-top: 5px;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
 
 }
 	
